# SOPilot

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
app/: __init__.py  plant_doctor_report.py  server.py
app/web/: app.js  config.js  index.html  styles.css
core/: __init__.py
core/adapters/: __init__.py  base.py  stub.py
core/evidence_ledger/: __init__.py  ledger.py
core/human_review/: __init__.py  review.py
core/kids_voice_assessment/: __init__.py  feedback.py  graph.py  hinglish_nlp.py  models.py  phonemes.py  pipeline.py  providers.py  reporting.py  scoring.py  service.py  (+1 more)
docs/: architecture.md  elevenlabs_voice_assessment_capabilities.md  how_to_add_new_agent.md  kids_voice_assessment_architecture.md  plant-doctor-aws-architecture.md  plant-doctor-aws-deploy-status.md  plant-doctor-mobile-trial.md  scaffold-hardening-lessons.md  sopilot_architecture.drawio  state_schema.md  tool_connector_contract.md
skills/: create_new_sop_agent.md
sopilot/: __init__.py  __main__.py  cli.py  config.py  conversation.py  media.py  report_view.py  report_writer.py  reporting.py  runner.py  scaffold.py  session_logging.py  web_runtime.py
tests/: test_adapter_registry.py  test_compiler.py  test_conversation.py  test_elevenlabs_voice_adapter.py  test_expr.py  test_kids_voice_assessment.py  test_media.py  test_openai_vision_adapter.py  test_plant_doctor_example.py  test_plant_doctor_report.py  test_plant_doctor_server.py  test_report_view.py  test_report_writer.py  test_reporting.py  test_runner.py  test_scaffold_manifest.py  test_web_runtime.py
(+73 files in other folders)
